2012-08-07  6.7.8-9 Cristy  <quetzlzacatenango@image...>
  * Selective blur stopped working after version 6.7.4-10 (reference
    http://www.imagemagick.org/discourse-server/viewtopic.php?f=3&t=21604).

2012-08-05  6.7.8-8 Cristy  <quetzlzacatenango@image...>
  * New version 6.7.8-8, SVN revision 8845.

2012-08-03  6.7.8-8 Anthony Thyssen <A.Thyssen@griffith...>
  * Added 2d named convolution kernel Binomial (for Fred Wienhaus)

2012-08-01  6.7.8-8 Nicolas Robidoux <nicolas.robidoux@gmail...>
  * Clean up sigmoidal-contrast.

2012-07-31  6.7.8-8 Cristy  <quetzlzacatenango@image...>
  * Use ConcatenateString() for multi-block GIF comments.
  * Caption no longer chops off text (reference
    http://www.imagemagick.org/discourse-server/viewtopic.php?f=3&t=21558).
  * Support LUV colorspace.
  * Support HCL colorspace.
  * Don't transform the composite image colorspace, set it instead.
  * Interpret -border 5% as 5% of width and 5% of height (reference
    http://www.imagemagick.org/discourse-server/viewtopic.php?f=3&t=21537).
  * Don't normalize zero-sum kernels (reference
    http://www.imagemagick.org/discourse-server/viewtopic.php?f=3&t=21584).
  * Transform grayscale to linear RGB if fill color is non-gray (reference
    http://www.imagemagick.org/discourse-server/viewtopic.php?f=3&t=21586).

2012-07-30  6.7.8-7 Cristy  <quetzlzacatenango@image...>
  * New version 6.7.8-7, SVN revision 8766.

2012-07-28  6.7.8-7 Glenn Randers-Pehrson <glennrp@image...>
  * Update certain typecasts for libpng < and >= 1.4.0 to allow memory
    allocation > 4GB and prevent a DOS.

2012-07-28  6.7.8-7 Cristy  <quetzlzacatenango@image...>
  * Set DICOM grayscale images to the gray colorspace.
  * Missing grestore from ps3.c (reference
    http://www.imagemagick.org/discourse-server/viewtopic.php?f=3&t=20445).
  * Use GetMagickResourceLimit(ThreadResource) to set the # threads (reference
    http://www.imagemagick.org/discourse-server/viewtopic.php?f=3&t=21543).
